[project]
name = "ai-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "beautifulsoup4>=4.13.4",
    "celery>=5.5.3",
    "fastapi>=0.115.14",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
    "dependency-injector>=4.42.0",
    "pydantic-settings>=2.6.1",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "apscheduler>=3.11.0",
]

[tool.uv.workspace]
members = ["ai-crawler"]
